# threed

./: .gitignore  pyproject.toml
threed/: main.py
threed/smpl_inference/: __init__.py  main.py  pose.py  shape.py  skinning.py  template.py
threed/utils/: __init__.py  cut_around_center.py  dict_to_sparse_matrix.py  make_serializable.py  rodrigues.py  sample_video.py  visual_utils.py
